# SPDX-FileCopyrightText: 2026 The P4 Language Consortium
#
# SPDX-License-Identifier: Apache-2.0

module(
    name = "com_github_p4lang_pi",
    # Fill in concrete versions only on release branches/in the BCR.
    version = "head",
    bazel_compatibility = [">=7.0.0"],
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "boost.container_hash", version = "1.90.0.bcr.1")
bazel_dep(name = "googleapis", version = "0.0.0-20260130-c0fcb356", repo_name = "com_google_googleapis")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", repo_name = "com_google_googletest")
bazel_dep(name = "grpc", version = "1.76.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "p4runtime", version = "1.5.0.bcr.1", repo_name = "com_github_p4lang_p4runtime")
bazel_dep(name = "protobuf", version = "33.5", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.2.17")

# Including this allows us to auto-format all Bazel files by running
# ```
# bazel run -- @buildifier_prebuilt//:buildifier -lint=fix -r $(bazel info workspace)
# ```
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2", dev_dependency = True)
