# TODO(antonin): move act_prof to some "extern" directory

nobase_include_HEADERS = \
PI/pi.h \
PI/pi_base.h \
PI/p4info.h \
PI/pi_tables.h \
PI/pi_value.h \
PI/pi_act_prof.h

nobase_include_HEADERS += \
PI/frontends/generic/pi.h

nobase_include_HEADERS += \
PI/p4info/actions.h \
PI/p4info/fields.h \
PI/p4info/tables.h \
PI/p4info/act_profs.h

nobase_include_HEADERS += \
PI/int/pi_int.h \
PI/int/serialize.h \
PI/int/rpc_common.h

nobase_include_HEADERS += \
PI/target/pi_imp.h \
PI/target/pi_tables_imp.h \
PI/target/pi_act_prof_imp.h
