# TODO(antonin): move act_prof to some "extern" directory

nobase_include_HEADERS = \
PI/pi.h \
PI/pi_base.h \
PI/p4info.h \
PI/pi_tables.h \
PI/pi_value.h \
PI/pi_act_prof.h \
PI/pi_counter.h \
PI/pi_meter.h \
PI/pi_learn.h \
PI/pi_mc.h \
PI/pi_clone.h

nobase_include_HEADERS += \
PI/frontends/generic/pi.h

nobase_include_HEADERS += \
PI/p4info/actions.h \
PI/p4info/tables.h \
PI/p4info/act_profs.h \
PI/p4info/counters.h \
PI/p4info/meters.h \
PI/p4info/digests.h

nobase_include_HEADERS += \
PI/int/pi_int.h \
PI/int/serialize.h \
PI/int/rpc_common.h

nobase_include_HEADERS += \
PI/target/pi_imp.h \
PI/target/pi_tables_imp.h \
PI/target/pi_act_prof_imp.h \
PI/target/pi_counter_imp.h \
PI/target/pi_meter_imp.h \
PI/target/pi_learn_imp.h \
PI/target/pi_mc_imp.h \
PI/target/pi_clone_imp.h
